erDiagram
    dim_product {
        INTEGER ProductID PK
        VARCHAR ProductName
        FLOAT UnitPrice
        INTEGER Discontinued
        VARCHAR CategoryName
    }
    dim_customer {
        VARCHAR CustomerID PK
        VARCHAR CompanyName
        VARCHAR City
        VARCHAR Region
        VARCHAR Country
    }
    dim_employee {
        INTEGER EmployeeID PK
        VARCHAR Title
        VARCHAR ReportsToFullName
        VARCHAR FullName
    }
    dim_time {
        DATE Date PK
        INTEGER DayOfWeekNumber
        VARCHAR DayOfWeekName
        INTEGER Month
        INTEGER Quarter
        INTEGER Year
        BOOLEAN IsWeekend
    }
    fact_order {
        BIGINT ID PK
        INTEGER OrderID
        INTEGER ProductID FK
        VARCHAR CustomerID FK
        INTEGER EmployeeID FK
        DATE OrderDate FK
        FLOAT Freight
        INTEGER ShipVia
        FLOAT UnitPrice
        INTEGER Quantity
        FLOAT Discount
        FLOAT TotalAmount
    }
    dim_product ||--o{ fact_order : "ProductID"
    dim_customer ||--o{ fact_order : "CustomerID"
    dim_employee ||--o{ fact_order : "EmployeeID"
    dim_time ||--o{ fact_order : "OrderDate"
